--- a/2,3.html
+++ b/2,3.html
@@ -10,7 +10,7 @@
       padding: 0;
       display: flex;
       justify-content: center;
-      align-items: flex-start; /* Изменили на flex-start */
+      align-items: flex-start;
       min-height: 100vh;
       background-color: #eee;
     }
